--- a/src/pages/hub/hub.scss
+++ b/src/pages/hub/hub.scss
@@ -1,3 +1,56 @@
 page-hub {
+    .cards-regioes {
+        flex: 1;
+        ion-card {
+            position: relative;
+            background-image: linear-gradient(-45deg, #237a57, #093028), ;
+            background-size: 400% 400%;
+            animation: Gradient 12s ease infinite;
+            color: white;
+            flex: 1;
+            &:nth-child(2) {
+                background-image: linear-gradient(-45deg, #1cb5e0, #000046);
+                animation-delay: .3s;
+            }
+            &:nth-child(3) {
+                background-image: linear-gradient(-45deg, #0f0c29, #302b63, #24243e);
+                animation-delay: .6s;
+            }
+            &:nth-child(4) {
+                background-image: linear-gradient(-45deg, #727a17, #414d0b);
+                animation-delay: .9s;
+            }
+            &:nth-child(5) {
+                background-image: linear-gradient(-45deg, #480048, #c04848);
+                animation-delay: 1.2s;
+            }
+        }
+        .representacao {
+            width: 100px;
+            //box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 1px 6px rgba(0,0,0,0.23);
+        }
+        .card {
+            min-height: 132px;
+        }
+        .card-title {
+            font-size: 2.0em;
+            font-weight: bold;
+            color: white;
+        }
+        .card-header {
+            white-space: normal;
+        }
+    }
+}
 
+@keyframes Gradient {
+    0% {
+        background-position: 0% 50%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
