--- a/src/pages/transicao/transicao.scss
+++ b/src/pages/transicao/transicao.scss
@@ -1,3 +1,12 @@
 page-transicao {
-
+    .resultado {
+        height: 100%;
+        flex-direction: column;
+        .icon {
+            font-size: 12em;
+        }
+        .button {
+            margin-top: 68px;
+        }
+    }
 }
